styles.css
/* Course Pop-Up Styles */
.courseinfo { 
    border-radius: 25px; 
    background-image: url(https://cbs12.com/resources/media/8e8ea23c-0a8f-4ee3-99f4-80f2bccd8538-large16x9_MGN_1280x720_90415B00CAVDZ.jpg?1566331974932)!important;
} 
.courseinfo-body {
    background: rgba(0,0,0,0.8) !important;
}
.userpicture { 
    display: none !important
} 
#fixy-user, #fixy-content, .fixy .fixy-header { 
    background: transparent
} 
.fixy-inner, body, #mr-nav { 
    background: #333 !important;
} 
h3, h2, p, .snap-completion-meta a { 
    color: white !important
} 
.coursefullname { 
    font-weight: 500 !important
}
.completion-line { 
    background: mediumpurple !important
}

/* Course Page Styles  -- p.s. I know it's ugly, but LSU's CSS isn't the cleanest to work with, haha */ 
header, #mr-nav, #page, li, ul, div:not(.courseinfo):not(.courseinfo-body):not(.dynamicinfo):not(.coursegrade):not(.completionstatus):not(.completion-line):not(.breadcrumb-nav), footer, p, span, table, tr, table.boxaligncenter.generaltable.user-grade *{
    background: #333 !important 
} 
h1, h2, h3, h4, h5, h6, p, a, li, span, i { 
    color: white !important 
} 
input[type="submit"],input[type="text"],input[type="number"] { 
    border-color: white !important; background: #e3e3e3 !important; color: black !important; 
}
#page-header { 
    background: rgb(2,0,36) !important; background: linear-gradient(158deg, rgba(2,0,36,1) 0%, rgba(85,1,117,1) 35%, rgba(42,1,74,1) 100%) !important;
} 
#page-mast, #page-mast > p, .breadcrumb-nav { 
    background: transparent !important; 
} 
.courseinfo:hover {    
    box-shadow: 0 8px 17px 0 mediumpurple, 0 6px 20px 0 rgba(85,1,117,1) !important;
}

